--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
             {% if user.avatar %}
                 <img src="{{ user.avatar.url }}" alt="Аватар" style="height: 40px; border-radius: 50%; vertical-align: middle;">
             {% endif %}
-            <span>Вы вошли как {{ user.email }}</span>
+            <span>Вы вошли как <a href="{% url 'users:profile' %}">{{ user.email }}</a></span>
 
             <a href="{% url 'mailing:recipient_list' %}">Получатели</a>
             <a href="{% url 'mailing:message-list' %}">Сообщения</a>
