добавлена ссылка на главную страницу

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <header>
-        <h1>Mailing Service</h1>
+        <h1><a href="{% url 'mailing:home' %}" style="color: white; text-decoration: none;">Mailing Service</a></h1>
     </header>
 
     <nav>
