--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,4 +6,5 @@
     {{ form.as_p }}
     <button type="submit">Войти</button>
   </form>
+  <p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
 {% endblock %}
